asdd extra logic into service using Comparator